# hpm

./: .gitignore  README.md  pyproject.toml
docs/: cli_reference.md  docker_workflow.md  hpm_market_analysis.md  hpm_specification.md  hsm_market_analysis.md  hsm_specification.md  installation_guide.md  python_workflow.md  user_guide.md  workflow_guide.md
docs/adr/: 003-declarative-manifest-and-adapters.md
docs/plans/: adapter_abstraction.md  expanding_adapters.md  implication_merging.md
docs/research/: gemini_3_pro_deep_research.md  qwen3_max_deep_research.md  refactoring_trends_2026.md
docs/tasks/: implement_functional_tests.md  implement_hsm_check.md  implement_implication_merging.md  implement_package_init.md  implement_pixi_adapter.md  refactor_adapters.md  support_hsm_registry_path.md
docs/technical_design/: 01_hpm_manifests_and_runtime.md  01_manifests_and_runtime.md  02_orchestrator_and_answers_getter.md  05_hpm_registry_and_groups.md  05_registry_and_groups.md  06_dry_run_and_validation.md  06_hpm_dry_run_and_validation.md  07_cli_and_manifest_management.md  08_package_manager_adapters.md  09_meta_orchestration_architecture.md  10_dependency_implication.md  11_testing_strategy.md  12_self_bootstrapping_sandbox.md  13_complex_configuration_cases.md  14_refactoring_architecture.md
src/hyper_package_manager/: cli.py  core.py  models.py  uv_manager.py
src/hyper_stack_manager/: __init__.py  adapters.py  cli.py  core.py  manifest.py  models.py
tasks_descriptions/ideas/: hypermcp_proxy_integration.md  implement_podman_adapter.md  real_world_testing_infrastructure.md  service_runtimes_ves.md
tasks_descriptions/plans/: environment_validation.md  parallel_sync.md  service_runtimes_ves.md
tasks_descriptions/tasks/: implement_environment_inspector.md  implement_environment_tests.md  implement_podman_adapter.md  implement_uv_runtime_adapter.md  (+4 more)
tests/: conftest.py  test_cli_basic.py  test_cli_project.py  test_cli_registry.py  test_docker_validation.py  test_environment_level.py  test_functional_flow.py  test_registry_logic.py  test_system_level.py
website/: docusaurus.config.ts  package-lock.json
(+44 files in other folders)
