[project]
name = "hyper-package-manager"
version = "0.1.0"
description = "HyperPackageManager (hpm) - A meta-package manager for dynamic Python environments"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
    "tomli-w>=1.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
hpm = "hyper_package_manager.cli:app"

[build-system]
requires = ["uv_build>=0.9.26"]
build-backend = "uv_build"